Bug Fixes
Bugs Fixed:
- Badge being too far to the right on expanded server list
- Headers on authorized apps being the same color as the descriptions

--- a/0-source/2-parts/_settings.scss
+++ b/0-source/2-parts/_settings.scss
@@ -22,7 +22,7 @@
         color: var(--skypecord-header-fg);
     }
     #{$settingsOptionPanel-title},
-    #{$authorizedApp-headerInfo} #{$settingsOption-formText} {
+    #{$authorizedApp} #{$authorizedApp-headerInfo} #{$settingsOption-formText} {
         color: var(--skypecord-header-title-fg);
     }
     #{$settingsOption-description},
